@@ -21,6 +21,7 @@ New Features:
   * Remove all dependencies on Spring from the jamwiki-core project by
     converting org.jamwiki.model.Role to an interface and creating a new
     org.jamwiki.authentication.RoleImpl class.
+  * Remove ability to automatically upgrade from versions prior to 0.7.0.
   * Upgrade to Spring Framework 3.0.0.RELEASE.
   * Upgrade to Spring Security 3.0.0.RELEASE.
   * Upgrade to Lucene Search 3.0.0.
